--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,60 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_list"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_background"
         tools:listitem="@layout/recyclerview_item"
-        android:padding="@dimen/big_padding"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/distance_ordinary"
+        android:padding="@dimen/distance_ordinary"
+        app:layout_constraintBottom_toTopOf="@id/separatorLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/separatorLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/distance_ordinary"
+        android:background="@color/green_dark"
+        app:layout_constraintBottom_toTopOf="@id/fab"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/distance_ordinary"
+        app:backgroundTint="@color/white"
+        app:tint="@color/green_dark"
+        app:borderWidth="0dp"
         android:contentDescription="@string/add_word"
-        android:src="@drawable/ic_add_black_24"/>
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
         android:id="@+id/editText_newInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/distance_ordinary"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingRight="@dimen/distance_ordinary"
+        android:paddingLeft="@dimen/distance_ordinary"
+        android:background="@drawable/rounded_background"
         android:ems="10"
         android:hint="@string/add_word"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/green_dark"
+        android:textColorHint="@color/green_gray_light"
+        app:layout_constraintBottom_toBottomOf="@+id/fab"
         app:layout_constraintEnd_toStartOf="@+id/fab"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
