--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="big_padding">16dp</dimen>
-    <dimen name="min_height">48dp</dimen>
+    <dimen name="distance_ordinary">16dp</dimen>
+    <dimen name="word_icon_size">30dp</dimen>
+    <dimen name="word_text_size">20sp</dimen>
 </resources>
