--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow"
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/yellow"
         app:iconifiedByDefault="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,31 +23,19 @@
         android:id="@+id/recyclerView_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/white"
         tools:listitem="@layout/recyclerview_item"
         android:padding="@dimen/distance_ordinary"
-        app:layout_constraintBottom_toTopOf="@id/separatorLine"
+        app:layout_constraintBottom_toTopOf="@id/fab"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchView" />
-
-    <View
-        android:id="@+id/separatorLine"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="@dimen/distance_ordinary"
-        android:background="@color/green_dark"
-        app:layout_constraintBottom_toTopOf="@id/fab"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/distance_ordinary"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/yellow"
         app:tint="@color/green_dark"
         app:borderWidth="0dp"
         android:contentDescription="@string/add_word"
@@ -56,23 +45,23 @@
 
     <EditText
         android:id="@+id/editText_newInput"
+        style="@style/text_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/distance_ordinary"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:paddingRight="@dimen/distance_ordinary"
-        android:paddingLeft="@dimen/distance_ordinary"
         android:background="@drawable/rounded_background"
         android:ems="10"
         android:hint="@string/add_word"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textColor="@color/green_dark"
-        android:textColorHint="@color/green_gray_light"
+        android:inputType="textPersonName|textAutoComplete"
+        android:paddingLeft="@dimen/distance_ordinary"
+        android:paddingTop="12dp"
+        android:paddingRight="@dimen/distance_ordinary"
+        android:paddingBottom="12dp"
+        android:textColorHint="@color/gray_dark_100"
         app:layout_constraintBottom_toBottomOf="@+id/fab"
         app:layout_constraintEnd_toStartOf="@+id/fab"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fab" />
+        app:layout_constraintTop_toTopOf="@+id/fab"
+        android:importantForAutofill="no" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
