--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView_word"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardBackgroundColor="@color/green_dark"
-    app:cardCornerRadius="5dp"
-    app:contentPadding="5dp">
+    android:layout_margin="3dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView_header"
+        style="@style/text_list"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/list_header"
+        app:layout_constraintEnd_toStartOf="@+id/textView_word"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/separatorLine"/>
 
-        <ImageView
-            android:id="@+id/imageView_wordIcon"
-            android:layout_width="@dimen/word_icon_size"
-            android:layout_height="@dimen/word_icon_size"
-            android:src="@drawable/ic_blur"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-       <TextView
-           android:id="@+id/textView_word"
-           android:layout_width="0dp"
-           android:layout_height="0dp"
-           android:layout_marginLeft="8dp"
-           android:layout_marginRight="8dp"
-           android:textSize="@dimen/word_text_size"
-           android:textColor="@color/white"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintLeft_toRightOf="@id/imageView_wordIcon"
-           app:layout_constraintRight_toRightOf="parent"
+    <TextView
+        android:id="@+id/textView_word"
+        style="@style/text_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBaseline_toBaselineOf="@id/textView_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView_header" />
+
+    <View
+        android:id="@+id/separatorLine"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/gray_dark_100"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_header"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-           />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
