Dependency Injection with Hilt is added. The app has been refactored to keep up with this change. Accordingly, ViewModel.Factory class is deleted. Because we do not need to create factory classes for ViewModels anymore with Hilt.

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -10,8 +10,8 @@
         style="@style/text_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/distance_ordinary"
+        android:layout_marginRight="@dimen/distance_ordinary"
         android:text="@string/list_header"
         app:layout_constraintEnd_toStartOf="@+id/textView_word"
         app:layout_constraintHorizontal_bias="0.5"
