--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/yellow"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
@@ -24,7 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/recyclerview_item"
-        android:padding="@dimen/distance_ordinary"
         app:layout_constraintBottom_toTopOf="@id/fab"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
